--- a/CPU/cameras/multiplecam_old/multiplecam/doc/release_notes.txt
+++ b/CPU/cameras/multiplecam_old/multiplecam/doc/release_notes.txt
@@ -1,10 +1,16 @@
 //============================================================================
 // Name        : multiplecam.cpp
 // Author      : Sara Turriziani
-// Version     : 3.1
+// Version     : 3.5
 // Copyright   : Mini-EUSO copyright notice
 // Description : Cameras Acquisition Module in C++, ANSI-style, for linux
 //============================================================================
+
+What it is new in 3.5 version:
+
+- The code now deals with two parfiles per each camera, namely the default parfile and the current parfiles, that are located in the subfolder called parfiles. If the current parfile is present, the code will update the camera parameters from it; however, if there is any issue with the current parfile, the code will rely on the default parfile. 
+Note that the bash script multiplecam.sh check 1. if a current parfile for the camera exists, 2. check if the parfile has any duplicate parameter inside; moreover, the c++ code nakes another check on the number of lines of the current parfile.
+The idea behind this approach is that we could change the paramters for the cameras during operation on the ISS using current parfiles, whereas the default parameters contains a list of safe parameters to be decided and fixed before launch.
 
 What it is new in 3.1 version:
 
